Fixes projects page spacing

--- a/index.css
+++ b/index.css
@@ -80,6 +80,7 @@ a {
 }
 .fixed-header {
   position: relative;
+  top: 1rem;
   padding: 1rem;
   position: sticky;
   top: 0;
@@ -88,6 +89,7 @@ a {
 }
 .fixed-footer {
   position: relative;
+  bottom: 1rem;
   padding: 1rem;
   position: sticky;
   bottom: 0;
